fix: context selector button shouldnt be visible when no context available

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -163,4 +163,10 @@
             }
         }
     }
+
+    &.hidden {
+        display: none !important;
+        visibility: hidden !important;
+        pointer-events: none !important;
+    }
 }
